--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.4",
+    "lowdb": "^1.0.0",
     "node-schedule": "^1.3.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.2"
