--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lowdb": "^1.0.0",
     "node-schedule": "^1.3.0",
     "pg": "^7.6.1",
+    "puppeteer": "^1.10.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.2"
   }
