--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
     "node-schedule": "^1.3.0",
     "pg": "^7.6.1",
     "puppeteer": "^1.10.0",
-    "request": "^2.88.0",
+    "request": "^2.88.0"
   }
 }
