--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.4",
     "lowdb": "^1.0.0",
+    "node-horseman": "^3.3.0",
     "node-schedule": "^1.3.0",
     "pg": "^7.6.1",
+    "phantom": "^6.0.3",
+    "phantomjs": "^2.1.7",
     "puppeteer": "^1.11.0",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "save": "^2.3.3"
   }
 }
